⬆️ str to word array update

--- a/lib/Makefile
+++ b/lib/Makefile
@@ -18,6 +18,7 @@ SRC = my/my_strlen.c \
 	my/my_strncat.c \
 	my/my_revstr.c \
 	my/my_isnum.c \
+	my/my_is_alpha_num.c \
 	my/my_str_to_word_array.c \
 	my/my_error_output.c \
 	printf/my_printf.c \
