--- a/lib/Makefile
+++ b/lib/Makefile
@@ -21,8 +21,11 @@ SRC = my/getters/my_strlen.c \
 	my/string/my_revstr.c \
 	my/string/my_strtrim.c \
 	my/checkers/my_isnum.c \
+	my/checkers/my_isascii.c \
 	my/file/fline.c \
-	my/checkers/my_is_alpha_num.c \
+	my/file/futils.c \
+	my/checkers/my_isalpha.c \
+	my/checkers/my_grep.c \
 	my/string/my_str_to_word_array.c \
 	my/printing/my_error_output.c \
 	printf/my_printf.c \
